<?xml version="1.0" encoding="UTF-8"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.texai</groupId>
    <artifactId>Texai</artifactId>
    <version>1.0</version>
  </parent>

  <groupId>org.texai</groupId>
  <artifactId>Utilities</artifactId>
  <packaging>jar</packaging>
  <version>1.0</version>
  <name>Utilities</name>
  <description>Provides support utilities</description>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>2.3.2</version>
        <configuration>
          <encoding>utf8</encoding>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <dependencies>
    <dependency>
      <groupId>com.outr.javasysmon</groupId>
      <artifactId>javasysmon_2.10</artifactId>
      <version>0.3.4</version>
    </dependency>
  </dependencies>
</project>


